2003-12-20  Zoltan Varga  <vargaz@freemail.hu>

	* typemanager.cs:  Change 'modules' field so it now contains Modules not
	ModuleBuilders.

2003-12-20  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.DefineMembers): Don't do the CS0649 check here.
	(FieldBase.IsAssigned): Removed this field.
	(FieldBase.SetAssigned): New public method.
	(TypeContainer.Emit): Make the CS0169/CS0649 checks actually work.

2003-12-20  Martin Baulig  <martin@ximian.com>

	* expression.cs (LocalVariableReference.DoResolve): Don't set
	`vi.Used' if we're called from DoResolveLValue().

	* statement.cs (Block.DoResolve): `ec.DoEndFlowBranching()' now
	returns the usage vector it just merged into the current one -
	pass this one to UsageWarning().
	(Block.UsageWarning): Take the `FlowBranching.UsageVector' instead
	of the `EmitContext', don't call this recursively on our children.

2003-12-19  Zoltan Varga  <vargaz@freemail.hu>

	* driver.cs: Implement /target:module.

2003-12-18  Zoltan Varga  <vargaz@freemail.hu>

	* support.cs (CharArrayHashtable): New helper class.

	* cs-tokenizer.cs: Store keywords in a hashtable indexed by 
	char arrays, not strings, so we can avoid creating a string in
	consume_identifier if the identifier is a keyword.

2003-12-16  Martin Baulig  <martin@ximian.com>

	* statement.cs (LocalInfo.Assigned): Removed this property.
	(LocalInfo.Flags): Removed `Assigned'.
	(LocalInfo.IsAssigned): New public method; takes the EmitContext
	and uses flow analysis.
	(Block.UsageWarning): Made this method private.
	(Block.Resolve): Call UsageWarning() if appropriate.

	* expression.cs (LocalVariableReference.DoResolve): Always set
	LocalInfo.Used here.

2003-12-13  Martin Baulig  <martin@ximian.com>

	* statement.cs (Statement.DoEmit, Statement.Emit): Don't return
	any value here; we're now using flow analysis to figure out
	whether a statement/block returns a value.

2003-12-13  Martin Baulig  <martin@ximian.com>
